fixed footer on mobile

--- a/issues.css
+++ b/issues.css
@@ -104,7 +104,7 @@ bottom:0;
 }
 
 .copyright{
-font-size: 40px;
+font-size: 35px;
 font-weight: 400;
 position: relative;
 top:25px;
